2008-12-01  Jürg Billeter  <j@bitron.ch>

	* configure.ac: Post-release version bump

2008-12-01  Jürg Billeter  <j@bitron.ch>

	* NEWS: update for 0.5.2 release

2008-12-01  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Fix gtk_text_view_get_line_at_y binding

	* vapi/gtk+-2.0.vapi: regenerated

2008-12-01  Jürg Billeter  <j@bitron.ch>

	* vala/valabinaryexpression.vala:
	* vala/valaconditionalexpression.vala:

	Fix critical when using conditional expressions in method contracts

2008-12-01  Jürg Billeter  <j@bitron.ch>

	* gobject/valagobjectmodule.vala:
	* gobject/valagsignalmodule.vala:

	Support signals in non-GObject classes, patch by Yu Feng,
	fixes bug 561989

2008-11-30  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Fix gtk_tree_model_get_value binding

	* vapi/gtk+-2.0.vapi: regenerated

2008-11-30  Jürg Billeter  <j@bitron.ch>

	* vala/valasymbolresolver.vala:

	Resolve types in switch labels

2008-11-30  Jürg Billeter  <j@bitron.ch>

	* vala/valaarraycreationexpression.vala:
	* vala/valaelementaccess.vala:
	* vala/valasemanticanalyzer.vala:

	Accept any integer type as array index

2008-11-30  Jürg Billeter  <j@bitron.ch>

	* vapi/gstreamer-rtsp-0.10.vapi:

	Regenerated

2008-11-30  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:

	Fix array length variable name for internal variables

2008-11-30  Jürg Billeter  <j@bitron.ch>

	* vala/valalocalvariable.vala:
	* vala/valamethodcall.vala:
	* vala/valasemanticanalyzer.vala:
	* gobject/valaccodebasemodule.vala:

	Avoid object duplication due to error handling

2008-11-30  Jürg Billeter  <j@bitron.ch>

	* vala/valamethodcall.vala:

	Move compiler internal variable to right block

2008-11-30  Jürg Billeter  <j@bitron.ch>

	* vala/valaelementaccess.vala:

	Fix error handling in element access expressions

2008-11-30  Jürg Billeter  <j@bitron.ch>

	* vala/Makefile.am:
	* vala/valacodewriter.vala:
	* compiler/valacompiler.vala:
	* vapigen/valavapigen.vala:
