@@ -1,3 +1,9 @@
+2008-12-02  Jürg Billeter  <j@bitron.ch>
+
+	* vala/valadatatype.vala:
+
+	Fix type resolving with nested generic types, fixes bug 562956
+
 2008-12-01  Jürg Billeter  <j@bitron.ch>
 
 	* configure.ac: Post-release version bump
